name:                abeelst
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

--Library pa
  --C-sources: src/nonblocking.c

-- Flag llvm
--   Description:  Compile via LLVM. This produces much better object code
--                 but your GHC needs to have been built against the LLVM compiler.

--   Default:      False

executable abeelst
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Util, Aubio, External, Sound, Memoize
  --ghc-options:         -threaded -rtsopts "-with-rtsopts=-N"

  ghc-options:
        -O2
        -threaded
        -with-rtsopts=-N

  --ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -sstderr"
  default-language:    Haskell2010
  build-depends:       base,
                       base16-bytestring,
                       bytestring,
                       containers,
                       cryptohash-md5,
                       directory,
                       hsndfile,
                       hsndfile-storablevector,
                       pretty-simple,
                       random,
                       process,
                       split,
                       storablevector,
                       temporary,
                       text,
                       time,
                       utf8-string
